# Operation-Jericho

./: .dockerignore  .gitignore  Dockerfile  README.md  build-docker.sh  claude_desktop_config.json  docker-compose.yml  download_games.sh  example_usage.py  fastmcp_server.py  jericho_mcp_server.py  main.py  pyproject.toml
src/: __init__.py  exceptions.py  game_env.py  resources.py  server.py  session.py  zork_env.py
