[project]
name = "jericho-fastmcp-server"
version = "0.1.0"
description = "FastMCP HTTP server for interactive text adventure games"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.2.0",
    "jericho>=3.3.1",
    "uvicorn>=0.31.0",
]

[project.scripts]
jericho-http-server = "fastmcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

